# MagicIsPower

./: .gitignore  CMakeLists.txt  CMakePresets.json  clean.bat  dbuild.bat  dmb.bat  rbuild.bat  rmb.bat  runb.bat  runr.bat  vcpkg.json
assets/shaders/: animation.vert  basic.frag  shader.spv
src/: CMakeLists.txt  main.cpp
src/common/: assimp_glm_helpers.hpp  ecs_core.hpp  logger.hpp  task.hpp  vertex.hpp
src/core/: CMakeLists.txt  app.cpp  app.hpp  window.cpp  window.hpp
src/game/: components.hpp  loaders.hpp  mob_logic.hpp  scene.hpp  skills_db.hpp  systems.hpp
src/graphics/: i_material.hpp  i_mesh.hpp  i_renderer.hpp  i_texture.hpp  sprite.hpp
src/graphics/renderer/vulkan/: CMakeLists.txt  vk_buffer.hpp  vk_image.hpp  vk_material.cpp  vk_material.hpp  vk_mesh.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_texture.cpp  vk_texture.hpp  vk_types.hpp  vk_ubo.hpp
src/shaders/: shader.slang  shader2.txt
